# calscin

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  test_struct.remir
.github/workflows/: pr-tests.yml
compiler/calsc_ast/: Cargo.toml
compiler/calsc_ast/src/: ifs.rs  imports.rs  lib.rs  nodes.rs  path.rs  refs.rs  types.rs  visibility.rs
compiler/calsc_ast/src/parser/: ctx.rs  enums.rs  forms.rs  func.rs  import.rs  lits.rs  lru.rs  matches.rs  mod.rs  structs.rs  types.rs  utils.rs  vars.rs
compiler/calsc_ast/src/parser/control/: for_loop.rs  ifelse.rs  loops.rs  mod.rs  while_loop.rs
compiler/calsc_ast/src/parser/values/: arrays.rs  binary.rs  casting.rs  conditions.rs  lits.rs  math.rs  mod.rs  ptrs.rs  range.rs  structs.rs
compiler/calsc_builder/: Cargo.toml
compiler/calsc_builder/src/: lib.rs
compiler/calsc_diagnostics/: Cargo.toml
compiler/calsc_diagnostics/src/: container.rs  file.rs  fmt.rs  lib.rs  panics.rs  result.rs  span.rs
compiler/calsc_diagnostics/src/diags/: errors.rs  mod.rs  warnings.rs
compiler/calsc_hir/: Cargo.toml
compiler/calsc_hir/src/: conv.rs  file.rs  funcs.rs  ifs.rs  imports.rs  intrinsics.rs  lib.rs  nodes.rs  refs.rs  types.rs
compiler/calsc_hir/src/buildcache/: entry.rs  mod.rs  types.rs
compiler/calsc_hir/src/globalctx/: key.rs  mod.rs  vals.rs
compiler/calsc_hir/src/localctx/: mod.rs  vars.rs
compiler/calsc_hir/src/prelude/: mod.rs
compiler/calsc_hir_lowering/: Cargo.toml
compiler/calsc_hir_lowering/src/: lib.rs
compiler/calsc_hir_lowering/src/imports/: helpers.rs  mod.rs
compiler/calsc_hir_lowering/src/modules/: mod.rs  seek.rs
compiler/calsc_hir_lowering/src/modules_lower/: mod.rs  prelude.rs  types.rs
compiler/calsc_hir_lowering/src/stage0/: func.rs  key.rs  lower_types.rs  mod.rs  prelude.rs  types.rs
compiler/calsc_hir_lowering/src/stage0/append/: funcs.rs  mod.rs  types.rs
compiler/calsc_hir_lowering/src/stage0/fill/: func.rs  lower_types.rs  mod.rs  prelude.rs  types.rs
compiler/calsc_hir_lowering/src/stage1/: funcs.rs  imports.rs  mod.rs  types.rs
compiler/calsc_hir_lowering/src/stage2/: control.rs  funcs.rs  key.rs  matches.rs  mod.rs  structs.rs  types.rs  vars.rs
compiler/calsc_hir_lowering/src/stage2/imports/: lower.rs  mod.rs
compiler/calsc_hir_lowering/src/stage2/values/: binary.rs  booleans.rs  cast.rs  index.rs  lits.rs  lru.rs  mod.rs  ptrs.rs
compiler/calsc_lexer/: Cargo.toml
compiler/calsc_lexer/src/: lib.rs  tests.rs  toks.rs
compiler/calsc_modules/: Cargo.toml
compiler/calsc_modules/src/: lib.rs  path.rs  types.rs  visibility.rs
compiler/calsc_modules/src/lazy/: func.rs  mod.rs  raw.rs
compiler/calsc_modules/src/tree/: clean.rs  collect.rs  entry.rs  mod.rs  traversal.rs
compiler/calsc_modules/src/treev2/: entry.rs  mod.rs  module.rs  traverse.rs
compiler/calsc_remir_lowering/: Cargo.toml
compiler/calsc_remir_lowering/src/: assigns.rs  body.rs  funcs.rs  indexes.rs  lib.rs  range.rs  reads.rs  result.rs  types.rs  utils.rs  vars.rs  writes.rs
compiler/calsc_remir_lowering/src/control/: fors.rs  ifs.rs  loops.rs  matches.rs  mod.rs
compiler/calsc_remir_lowering/src/mono/: mod.rs  resolver.rs
compiler/calsc_remir_lowering/src/values/: bool.rs  consts.rs  math.rs  mod.rs  ptrs.rs
compiler/calsc_remir_lowering/src/values/casts/: mod.rs
compiler/calsc_state/: Cargo.toml
compiler/calsc_state/src/: build.rs  lib.rs
compiler/calsc_tree_build/: Cargo.toml
compiler/calsc_tree_build/src/: ctx.rs  discover.rs  lib.rs
compiler/calsc_typing/: Cargo.toml
compiler/calsc_typing/src/: allocs.rs  builders.rs  cell.rs  ctx.rs  fmt.rs  func.rs  funcs.rs  hash.rs  hints.rs  iter.rs  lib.rs  params.rs  tree.rs
compiler/calsc_typing/src/base/: instance.rs  kind.rs  mod.rs  structs.rs
compiler/calsc_typing/src/into/: kind.rs  mod.rs  primitives.rs  traits.rs
compiler/calsc_typing/src/params/: mod.rs
compiler/calsc_typing/src/prelude/: mod.rs
compiler/calsc_typing/src/traits/: fields.rs  mod.rs  prelude.rs  type_params.rs
compiler/calsc_typing/src/types/: allocs.rs  enums.rs  fmt.rs  mod.rs  primitive.rs  structs.rs
compiler/calsc_typing_v2/: Cargo.toml
compiler/calsc_typing_v2/src/: allocs.rs  builders.rs  ctx.rs  funcs.rs  lib.rs
compiler/calsc_typing_v2/src/into/: mod.rs  primitives.rs  traits.rs
compiler/calsc_typing_v2/src/prelude/: mod.rs
compiler/calsc_typing_v2/src/traits/: fields.rs  iter.rs  mod.rs  prelude.rs
compiler/calsc_typing_v2/src/types/: fmt.rs  mod.rs  primitive.rs  structs.rs
compiler/calsc_utils/: Cargo.toml
compiler/calsc_utils/src/: cmp.rs  fs.rs  hash.rs  lib.rs  math.rs  path.rs  pos.rs  refcell.rs  str.rs  unsafes.rs
compiler/calsc_utils/src/alloc/: arena.rs  mod.rs
compiler/cli/: Cargo.toml
compiler/cli/src/: main.rs
compiler/cli/src/commands/: build.rs  check.rs  ir.rs  mod.rs  remir.rs
compiler/main/: Cargo.toml
compiler/main/src/: main.rs
examples/: control.cal  control.cl  enums.cal  extern.cal  helloworld.cal  math.cal  module.cal  pointers.cal  structs.cal  structs.cl  type_params.cal
tests/ast/: Cargo.toml
tests/ast/src/: control.rs  func.rs  lib.rs  types.rs  vals.rs  vars.rs
tests/hir/: Cargo.toml
tests/hir/src/: globalctx.rs  lib.rs  localctx.rs
tests/lexer/: Cargo.toml
tests/lexer/src/: lib.rs
tests/typing/: Cargo.toml
tests/typing/src/: fields.rs  funcs.rs  lib.rs  type_parameters.rs
