[workspace]
members = [
	"compiler/calsc_ast",
	"compiler/calsc_diagnostics",
	"compiler/calsc_hir",
	"compiler/calsc_hir_lowering",
	"compiler/calsc_lexer",
	"compiler/calsc_remir_lowering",
	"compiler/calsc_typing",
	"compiler/calsc_utils",
	"compiler/cli",
	"tests/ast",
	"tests/hir",
	"tests/lexer",
	"tests/typing",
]
