[workspace]
members = [
	"compiler/calsc_ast",
	"compiler/calsc_builder",
	"compiler/calsc_diagnostics",
	"compiler/calsc_hir",
	"compiler/calsc_hir_lowering",
	"compiler/calsc_lexer", "compiler/calsc_modules",
	"compiler/calsc_remir_lowering",
	"compiler/calsc_state",
	"compiler/calsc_typing_v2",
	"compiler/calsc_utils",
	"compiler/cli",
	"tests/ast",
	"tests/hir",
	"tests/lexer",
	"tests/typing",
]
