[package]
name = "calsc_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_lexer = { path = "../calsc_lexer" }
calsc_ast = { path = "../calsc_ast", features = ["parser"] }
calsc_hir = { path = "../calsc_hir" }
calsc_hir_lowering = { path = "../calsc_hir_lowering" }
calsc_remir_lowering = { path = "../calsc_remir_lowering" }
calsc_diagnostics = { path = "../calsc_diagnostics" }
