[package]
name = "calsc_hir"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_utils = { path = "../calsc_utils" }
calsc_typing = { path = "../calsc_typing" }
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_modules = { path = "../calsc_modules" }
calsc_state = { path = "../calsc_state" }

[features]
debug = ["calsc_typing/debug"]
