[package]
name = "calsc_hir_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_ast = { path = "../calsc_ast", features = ["debug"] }
calsc_hir = { path = "../calsc_hir", features = ["debug"] }
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_utils = { path = "../calsc_utils" }
calsc_typing = { path = "../calsc_typing" }
calsc_modules = { path = "../calsc_modules" }
