[package]
name = "calsc_remir_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_hir = { path = "../calsc_hir" }
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_utils = { path = "../calsc_utils" }
calsc_typing = { path = "../calsc_typing" }
remir = { git = "https://github.com/Zffu/remir.git", version = "1.0.1", features = [
	"allow_ptr_array_casting",
] }
remir_llvm = { git = "https://github.com/Zffu/remir.git", version = "1.0.1" }
