[package]
name = "calsc_remir_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_hir = { path = "../calsc_hir" }
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_utils = { path = "../calsc_utils" }
calsc_typing = { path = "../calsc_typing" }
remir = { git = "https://github.com/Zffu/remir.git", version = "1.0.1" }
remir_llvm = { git = "https://github.com/Zffu/remir.git", version = "1.0.1", optional = true }
calsc_state = { path = "../calsc_state" }

[features]
llvm = ["remir_llvm"]
