[package]
name = "calsc_tree_build"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_modules = { path = "../calsc_modules" }
calsc_ast = { path = "../calsc_ast" }
calsc_lexer = { path = "../calsc_lexer"}
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_utils = { path = "../calsc_utils"}
