[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_lexer = { path = "../calsc_lexer" }
calsc_ast = { path = "../calsc_ast" }
calsc_hir = { path = "../calsc_hir", features = ["debug"] }
calsc_diagnostics = { path = "../calsc_diagnostics" }
calsc_hir_lowering = { path = "../calsc_hir_lowering" }
calsc_remir_lowering = { path = "../calsc_remir_lowering" }
