[package]
name = "hir"
version = "0.1.0"
edition = "2024"

[dependencies]
calsc_utils = { path = "../../compiler/calsc_utils" }
calsc_hir = { path = "../../compiler/calsc_hir", features = ["debug"] }
calsc_diagnostics = { path = "../../compiler/calsc_diagnostics" }
calsc_typing_v2 = { path = "../../compiler/calsc_typing_v2" }
calsc_modules = { path = "../../compiler/calsc_modules" }
